--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "nodemail",
-  "version": "1.0.0",
-  "description": "",
-  "main": "cronjob.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/NielsGamborg/cronjob.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/NielsGamborg/cronjob/issues"
-  },
-  "homepage": "https://github.com/NielsGamborg/cronjob#readme",
-  "devDependencies": {
-    "current-week-number": "^1.0.7",
-    "node-cron": "^1.2.1",
-    "nodemailer": "^4.0.1"
-  }
+    "name": "nodemail",
+    "version": "1.0.0",
+    "description": "",
+    "main": "cronjob.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "smtpserver": "smtp-server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/NielsGamborg/cronjob.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/NielsGamborg/cronjob/issues"
+    },
+    "homepage": "https://github.com/NielsGamborg/cronjob#readme",
+    "devDependencies": {
+        "current-week-number": "^1.0.7",
+        "node-cron": "^1.2.1",
+        "nodemailer": "^4.0.1",
+        "smtp-server": "^3.1.0"
+    }
 }
